test/libsolidity/syntaxTests/dataLocations/publicFunction/function_argument_location_specifier_test_public_memory.sol
contract test {
    function f(bytes memory) public;
}
// ----
// TypeError: (0-54): Contract "test" should be marked as abstract.
